update object page

--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -134,5 +134,7 @@
 @import "./components/object/object-rating";
 @import "./components/object/object-reviews";
 @import "./components/object/object-location";
+@import "./components/object/object-about";
+@import "./components/object/object-faq";
 
 
