--- a/src/assets/styles/components/object/object-reviews.scss
+++ b/src/assets/styles/components/object/object-reviews.scss
@@ -12,6 +12,10 @@
     display: grid;
     grid-template-columns: 180px 1fr;
     column-gap: 140px;
+    &:last-child {
+      padding-bottom: 0;
+      border: none;
+    }
   }
 
   &__left {
@@ -177,5 +181,9 @@
         border-color: rgba($blue-500, 0.5);
       }
     }
+  }
+
+  &__links {
+    margin-top: 40px;
   }
 }
