--- a/src/assets/styles/components/object/object-sidebar.scss
+++ b/src/assets/styles/components/object/object-sidebar.scss
@@ -10,10 +10,18 @@
     border-radius: 10px;
     box-shadow: 0px 4px 25px 0px rgba($gray-800, 0.12);
     padding: 24px;
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
   }
 
   &__block {
     padding-bottom: 30px;
+    border-bottom: 1px solid rgba($blue-700, 0.15);
+    &:last-child {
+      border: none;
+      padding-bottom: 0;
+    }
   }
 
   &__title {
@@ -109,5 +117,9 @@
 
     padding: 0 5px;
     background-color: $red-400;
+  }
+
+  &__links {
+    margin-top: 30px;
   }
 }
