--- a/src/views/components/object/object-card-two.pug
+++ b/src/views/components/object/object-card-two.pug
@@ -21,14 +21,14 @@
               use(xlink:href="#svg-arrow-right")
           .swiper-pagination
       .object-card__information
-        h2.object-card__title Стандартный 2-местный 1-комнатный ПК
+        h2.object-card__title Стандартный 2-местный DBL/TWIN доп. место ребенку до 12 лет квартал №14
         .object-card__items
           .object-card__item
             .object-card__name
               svg(width="18" height="18" viewBox="0 0 18 18")
                 use(xlink:href="#svg-object-building")
               span Корпус:
-          .object-card__item  №1, №3, №4, №5
+          .object-card__item  Квартал 14
             .object-card__help.object-card__help--stations
               svg(width="16" height="16" viewBox="0 0 16 16")
                 use(xlink:href="#svg-search-help")
@@ -45,41 +45,43 @@
               svg(width="18" height="18" viewBox="0 0 18 18")
                 use(xlink:href="#svg-object-bath")
               span Санузел:
-          .object-card__item с душем, унитаз, умывальник, туалетные принадлежности, фен, набор полотенец, пляжное полотенце (с мая по октябрь).
+          .object-card__item ванна, туалет, умывальник, фен.
           .object-card__item
             .object-card__name
               svg(width="18" height="18" viewBox="0 0 18 18")
                 use(xlink:href="#svg-object-user-plus")
               span Доп. место:
-          .object-card__item еврораскладушка
+          .object-card__item диван или раскладушка (до 12 лет)
       .object-card__information.object-card__information--end
         h4.object-card__named В номере:
-        .object-card__item 2 большие кровати, диван, микроволновая печь, кондиционер, холодильник без наполнения, стиральная машина, два телевизора, телефон, два сейфа, чайник, посуда (тарелки, чайные кружки, бокалы, набор столовых приборов), гладильная доска и утюг, Wi-Fi, балкон.
+        .object-card__item Вешалка, зеркало, две кровати односпальные + одна односпальная (extra bed), прикроватные тумбочки, стол, стулья, шкаф, кондиционер, мини-холодильник, телевизор, телефон, лоджия (балкон) не во всех номерах.
     .object-card__lines
       .object-card__line
         .object-card__left
-          h3.object-card__subtitle Без лечения (Полный пансион)
+          h3.object-card__subtitle Без лечения (Полупансион, Завтрак + Ужин)
           button.object-card__link(type="button") Описание тарифа
         .object-card__right
           .object-card__cost
-            .object-card__price 67 900 ₽
+            .object-card__price 33 900 ₽
             .object-card__amount за 7 ночей, 2 взрослых +1 реб.
           button.object-card__button(type="button") Запросить бронирование
       .object-card__line
         .object-card__left
-          h3.object-card__subtitle С лечением ИЛИ Реабилитация после Covid-19 (Полный пансион)
+          h3.object-card__subtitle С лечением (Лето)
           button.object-card__link(type="button") Описание тарифа
         .object-card__right
           .object-card__cost
-            .object-card__price 109 830 ₽
+            .object-card__price 77 265 ₽
             .object-card__amount за 7 ночей, 2 взрослых +1 реб.
           button.object-card__button(type="button") Запросить бронирование
       .object-card__line
         .object-card__left
-          h3.object-card__subtitle С лечением (Полный пансион) VIP
+          h3.object-card__subtitle С лечением (Мацеста) ИЛИ Послеожоговая (Полный пансион)
           button.object-card__link(type="button") Описание тарифа
         .object-card__right
           .object-card__cost
-            .object-card__price 1 538 750 ₽
+            .object-card__price 184 525 ₽
             .object-card__amount за 7 ночей, 2 взрослых +1 реб.
           button.object-card__button(type="button") Запросить бронирование
+    button.object-card__more.object__link.object__link--orange(type="button")
+      span Показать еще 2 тарифа
