--- a/src/views/components/object/object-hero.pug
+++ b/src/views/components/object/object-hero.pug
@@ -34,14 +34,12 @@
         a.object-hero__button(href="#") Показать цены
       .object-hero__links
         a.object-hero__link.active(href="#") Информация
-        a.object-hero__link(href="#") Бронирование
-        a.object-hero__link(href="#") Удобства и услуги
-        a.object-hero__link(href="#") Лечение
-        a.object-hero__link(href="#") Лечебные программы
+        a.object-hero__link(href="#") Лечение в санатории
         a.object-hero__link(href="#") Инфраструктура
         a.object-hero__link(href="#") Отзывы
         a.object-hero__link(href="#") Расположение
-        a.object-hero__link(href="#") Номера
+        a.object-hero__link(href="#") Номерной фонд
+        a.object-hero__link(href="#") Акции
         a.object-hero__link(href="#") Вопрос-ответ
 
 
