--- a/src/views/components/object/object-reviews.pug
+++ b/src/views/components/object/object-reviews.pug
@@ -126,4 +126,7 @@
           p Отдыхали в санатории Знание в апреле 2024. Повезло с погодой было тепло и сухо, многие даже загорали у моря. Персонал и врачи внимательные и вежливые, очень доброжелательные. Еда разнообразная и вкусная, много овощных гарниров. Очень красивая территория. По вторникам проводится очень интересная экскурсия по парку. Много различных цветущих растений. В парке живут белки и различные птицы. Жаль, что до сих пор. В парке живут белки и различные птицы. Жаль, что до сих пор
           p Отдыхали в санатории Знание в апреле 2024. Повезло с погодой было тепло и сухо, многие даже загорали у моря. Персонал и врачи внимательные и вежливые, очень доброжелательные.
         button.object-reviews__button(type="button") Читать полностью
-  include ../pagination-huge
+  .object-reviews__links
+    button.object__link.object__link--blue(type="button")
+      span Читать все отзывы
+      .object__amount 76
