--- a/src/views/components/object/object-sidebar.pug
+++ b/src/views/components/object/object-sidebar.pug
@@ -34,37 +34,40 @@ aside.object-sidebar
               use(xlink:href="#svg-object-approve")
             span Covid-19
       .object-sidebar__block
-        h3.object-sidebar__title Основные профили лечения
+        h3.object-sidebar__title Дополнительные профили
         ul.object-sidebar__list
           li
             svg(width="20" height="20" viewBox="0 0 20 20")
               use(xlink:href="#svg-object-approve") 
-            span ЛОР органы
+            span Болезни мужской половой сферы
           li 
             svg(width="20" height="20" viewBox="0 0 20 20")
               use(xlink:href="#svg-object-approve") 
-            span Сердечно-сосудистая система
+            span Гинекология
           li 
             svg(width="20" height="20" viewBox="0 0 20 20")
               use(xlink:href="#svg-object-approve")
-            span Нервная система
+            span Заболевания эндокринной системы
           li 
             svg(width="20" height="20" viewBox="0 0 20 20")
               use(xlink:href="#svg-object-approve")
-            span Опорно-двигательный аппарат
+            span ЛОР органы
           li 
             svg(width="20" height="20" viewBox="0 0 20 20")
               use(xlink:href="#svg-object-approve")
-            span Органы дыхания
+            span Нарушение обмена веществ
           li
             svg(width="20" height="20" viewBox="0 0 20 20")
               use(xlink:href="#svg-object-approve")
-            span Covid-19
-        a.object__link.object__link--blue(href="#")
-          span Подробнее о лечении
+            span Офтальмология
+        .object-sidebar__links
+          a.object__link.object__link--blue(href="#")
+            span Подробнее о лечении
 
     .object-sidebar__blocks
-      h3.object-sidebar__title Документы для заселения
-      p.object-sidebar__text <span>Внимательно</span> изучите список документов, которые Вам потребуются для проживания
-      a.object__link(href="#")
-        span Список необходимых документов
+      .object-sidebar__item
+        h3.object-sidebar__title Документы для заселения
+        p.object-sidebar__text <span>Внимательно</span> изучите список документов, которые Вам потребуются для проживания
+        .object-sidebar__links
+          a.object__link.object__link--blue(href="#")
+            span Смотреть список документов
