--- a/src/assets/styles/components/object/object-card.scss
+++ b/src/assets/styles/components/object/object-card.scss
@@ -92,6 +92,7 @@
     column-gap: 20px;
     row-gap: 14px;
     grid-template-columns: 1fr 382px;
+    align-items: start;
   }
 
   &__item {
@@ -281,6 +282,10 @@
     justify-content: space-between;
     padding: 24px 0;
     border-bottom: 1px solid rgba($blue-700, 0.15);
+    &:last-child {
+      border-bottom: 0;
+      padding-bottom: 0;
+    }
   }
 
   &__right {
@@ -344,5 +349,9 @@
         background-color: $orange-300;
       }
     }
+  }
+
+  &__more {
+    margin-top: 30px;
   }
 }
