--- a/src/assets/styles/components/object/object-conditions.scss
+++ b/src/assets/styles/components/object/object-conditions.scss
@@ -27,10 +27,7 @@
     font-weight: 600;
     line-height: 18px;
     border-bottom: 1px dashed;
-    &--blue {
-      color: $blue-500;
-      border-color: rgba($blue-500, 0.5);
-    }
+    
     &--green {
       color: $green-300;
       border-color: rgba($green-300, 0.5);
@@ -44,6 +41,15 @@
       &:hover {
         color: $orange-500;
         border-color: transparent;
+      }
+    }
+    &--blue {
+      color: $blue-500;
+      border-color: rgba($blue-500, 0.5);
+      border-style: solid;
+      &:hover {
+        color: $orange-500;
+        border-color: $orange-500;
       }
     }
   }
