--- a/src/assets/styles/components/object/object-contact.scss
+++ b/src/assets/styles/components/object/object-contact.scss
@@ -4,9 +4,14 @@
   &__wrapper {
     background-color: rgba($blue-700, 0.1);
     border-radius: 10px;
-    padding: 24px 88px 24px 24px;
     display: flex;
     justify-content: space-between;
+    @include max-screen(laptop) {
+      padding: 24px 24px 24px 24px;
+    }
+    @include min-screen(desktop) {
+      padding: 24px 88px 24px 24px;
+    }
   }
 
   &__title {
@@ -25,7 +30,7 @@
   &__link {
     font-size: 18px;
     font-weight: 600;
-    line-height: 24px;
+    line-height: 20px;
     color: $blue-500;
     @include min-screen(laptop) {
       transition: color $transition-default;
@@ -44,6 +49,15 @@
       font-weight: 400;
       line-height: 24px;
       color: $black-300;
+    }
+  }
+
+  &__blocks {
+    display: flex;
+    align-items: center;
+    gap: 24px;
+    svg {
+      stroke: transparent;
     }
   }
 }
