--- a/src/assets/styles/components/object/object.scss
+++ b/src/assets/styles/components/object/object.scss
@@ -1,7 +1,22 @@
 .object {
   background-color: $bg-blue;
 
+  &__title {
+    font-size: 30px;
+    font-weight: 700;
+    line-height: 32px;
+    color: $black-400;
+    span {
+      font-weight: 400;
+      color: $gray-400;
+    }
+  }
+
   &__wrapper {
+    padding-bottom: 80px;
+  }
+
+  &__container {
     @include min-screen(laptop) {
       grid-template-columns: 1fr 306px;
       column-gap: 24px;
@@ -11,8 +26,10 @@
   }
 
   &__link {
-    display: inline-block;
-    margin-top: 30px;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    gap: 8px;
     span {
       font-size: 16px;
       font-weight: 600;
@@ -49,6 +66,12 @@
     &--tiny {
       width: auto;
       max-width: max-content;
+    }
+    &--orange {
+      background-color: rgba($orange-500, $alpha: 0.1);
+      border-radius: 8px;
+      padding: 11px;
+      width: 100%;
     }
   }
 
@@ -92,5 +115,18 @@
     display: flex;
     flex-direction: column;
     gap: 30px;
+  }
+
+  &__cards {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+  }
+
+  &__amount {
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 18px;
+    color: $gray-400;
   }
 }
