update object page

--- a/src/assets/styles/mixins/breadcrumbs.scss
+++ b/src/assets/styles/mixins/breadcrumbs.scss
@@ -99,6 +99,13 @@
           display: flex;
           justify-content: center;
         }
+      }
+    }
+  }
+
+  &--last {
+    .breadcrumbs {
+      &__list {
         li {
           &:first-child {
             display: none;
