--- a/src/views/layouts/master.pug
+++ b/src/views/layouts/master.pug
@@ -111,6 +111,7 @@ html(lang="ru")
     include ../components/how-to-book/how-to-book-popup
     include ../components/search/search-sorting-popup
     include ../components/search/search-station-popup
+    include ../components/object/object-popup-booking
 
     include ../components/footer
 
