--- a/src/views/pages/how-to-book-inner.pug
+++ b/src/views/pages/how-to-book-inner.pug
@@ -22,7 +22,7 @@ block content
       ],
       'Другое направление',
       '',
-      'breadcrumbs--centered breadcrumbs--blue'
+      'breadcrumbs--centered breadcrumbs--last breadcrumbs--blue'
     )
     include ../components/how-to-book-inner/how-to-book-inner-hero
     include ../components/how-to-book-inner/how-to-book-inner-video
