--- a/src/views/pages/object.pug
+++ b/src/views/pages/object.pug
@@ -12,52 +12,51 @@ block manifestBrowserconfigFiles
   meta(content="../browserconfig.xml" name="msapplication-config")
 
 block content
-  main
-    .object
-      include ../components/object/object-gallery
-      include ../components/object/object-hero
-      .wrapper
-        .object__wrapper
-          .object__container
-            .object__blocks
-              .object__block
-                include ../components/object/object-information
-              .object__block
-                h2.object__title Лечение <span>в санатории «Знание»</span>
-                include ../components/object/object-information-two
-              .object__block
-                include ../components/object/object-transfer
-            .object__sidebar
-              include ../components/object/object-sidebar
-          include ../components/object/object-search
-          include ../components/object/object-conditions
-          .object__cards
-            include ../components/object/object-card
-            include ../components/object/object-card-two
-          include ../components/object/object-contact
-          .object__descriptions
-            //- include ../components/object/object-description
-            //- include ../components/object/object-description-two
-            //- .object-description
-              .object-description__wrapper
-                h2.object__title Лечебные программы <span>в санатории «Знание»</span>
-              .object__dropdowns
-                include ../components/object/object-dropdown
-                include ../components/object/object-dropdown
-                include ../components/object/object-dropdown
-                include ../components/object/object-dropdown
-                include ../components/object/object-dropdown
-            //- include ../components/object/object-description-three
-            .object-description
-              .object-description__wrapper
-                h2.object__title 76 отзывов <span>о санатории «Знание»</span>
-                  include ../components/object/object-rating
-                  include ../components/object/object-reviews
-            //- .object-description
-            //-   .object-description__wrapper
-            //-     h2.object__title Расположение <span>санатория «Знание»</span>
-            //-       include ../components/object/object-location
-          include ../components/object/object-about
-      include ../components/object/object-faq
-    include ../components/attractions/attractions-sanatorium
+  main.object
+    include ../components/object/object-gallery
+    include ../components/object/object-hero
+    .wrapper
+      .object__wrapper
+        .object__container
+          .object__blocks
+            .object__block
+              include ../components/object/object-information
+            .object__block
+              h2.object__title Лечение <span>в санатории «Знание»</span>
+              include ../components/object/object-information-two
+            .object__block
+              include ../components/object/object-transfer
+          .object__sidebar
+            include ../components/object/object-sidebar
+        include ../components/object/object-search
+        include ../components/object/object-conditions
+        .object__cards
+          include ../components/object/object-card
+          include ../components/object/object-card-two
+        include ../components/object/object-contact
+        .object__descriptions
+          //- include ../components/object/object-description
+          //- include ../components/object/object-description-two
+          //- .object-description
+            .object-description__wrapper
+              h2.object__title Лечебные программы <span>в санатории «Знание»</span>
+            .object__dropdowns
+              include ../components/object/object-dropdown
+              include ../components/object/object-dropdown
+              include ../components/object/object-dropdown
+              include ../components/object/object-dropdown
+              include ../components/object/object-dropdown
+          //- include ../components/object/object-description-three
+          .object-description
+            .object-description__wrapper
+              h2.object__title 76 отзывов <span>о санатории «Знание»</span>
+                include ../components/object/object-rating
+                include ../components/object/object-reviews
+          //- .object-description
+          //-   .object-description__wrapper
+          //-     h2.object__title Расположение <span>санатория «Знание»</span>
+          //-       include ../components/object/object-location
+        include ../components/object/object-about
+    include ../components/object/object-faq
+  include ../components/attractions/attractions-sanatorium
 
