--- a/src/views/components/object-booking/object-booking-sidebar.pug
+++ b/src/views/components/object-booking/object-booking-sidebar.pug
@@ -3,15 +3,21 @@ aside.object-booking-sidebar
     .object-booking-sidebar__block
       .object-booking-sidebar__header
         .object-booking-sidebar__name Данные поездки
-        button.object-booking-sidebar__change(type="button") Изменить
-      .object-booking-sidebar__items
+        button.object-booking-main__link.object-booking-main__link--orange(type="button") Изменить
+      .object-booking-sidebar__items.object-booking-sidebar__label
         .object-booking-sidebar__item
+          span Заезд
+          p 03.07.2023
         .object-booking-sidebar__item
+          span Количество ночей
+          p 7 ночей
         .object-booking-sidebar__item
-
-
-
-
+          span Отдыхающие
+          p 2 взрослых
 
     .object-booking-sidebar__block
       .object-booking-sidebar__header
+        .object-booking-sidebar__name Стоимость путевки
+      .object-booking-sidebar__label.object-booking-sidebar__price 138 460 ₽
+      .object-booking-sidebar__discount Предоплата 50%
+      .object-booking-sidebar__prepayment 69 230 ₽
