--- a/src/assets/styles/components/object/object.scss
+++ b/src/assets/styles/components/object/object.scss
@@ -1,6 +1,10 @@
 .object {
   background-color: $bg-blue;
 
+  &__main {
+    margin-top: 30px;
+  }
+
   &__title {
     font-size: 30px;
     font-weight: 700;
@@ -12,8 +16,20 @@
     }
   }
 
+  &__slider {
+    background-color: $white;
+  }
+
   &__wrapper {
     padding-bottom: 80px;
+    .attractions-information {
+      margin-top: 10px;
+      margin-bottom: 0;
+    }
+  }
+
+  &__reviews {
+    margin-top: 80px;
   }
 
   &__container {
@@ -79,8 +95,8 @@
     display: flex;
     flex-direction: column;
     gap: 70px;
-    padding-top: 70px;
-    padding-bottom: 80px;
+    // padding-top: 70px;
+    // padding-bottom: 80px;
   }
 
   &__dropdowns {
