--- a/src/views/components/object/object-hero.pug
+++ b/src/views/components/object/object-hero.pug
@@ -37,9 +37,6 @@
         a.object-hero__link(href="#") Лечение в санатории
         a.object-hero__link(href="#") Инфраструктура
         a.object-hero__link(href="#") Отзывы
-        a.object-hero__link(href="#") Расположение
+        a.object-hero__link(href="#") Как добраться
         a.object-hero__link(href="#") Номерной фонд
         a.object-hero__link(href="#") Акции
-        a.object-hero__link(href="#") Вопрос-ответ
-
-
