--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -136,6 +136,9 @@
 @import "./components/object/object-about";
 @import "./components/object/object-faq";
 @import "./components/object/object-popup-booking";
+@import "./components/object/object-no-available";
+@import "./components/object/object-sanatorium";
+
 
 @import "./components/object-booking/object-booking";
 @import "./components/object-booking/object-booking-sidebar";
