--- a/src/views/components/object/object-sidebar.pug
+++ b/src/views/components/object/object-sidebar.pug
@@ -1,10 +1,12 @@
 aside.object-sidebar
   .object-sidebar__wrapper
-    .object-sidebar__banner
-      img(src="/assets/images/object/7.png" alt="" loading="lazy")
+    .object-sidebar__blocks.object-sidebar__blocks--small
+      svg.object-sidebar__svg(width="112" height="106" viewBox="0 0 112 106")
+        use(xlink:href="#svg-object-horn") 
       .object-sidebar__content
         .object-sidebar__status Акция
-        .object-sidebar__description Путешествие в лето! - ранее бронирование 2024
+        .object-sidebar__description <a href="#">Смотреть</a> действующие акции
+          span 2
     .object-sidebar__blocks
       .object-sidebar__block
         h3.object-sidebar__title Основные профили лечения
