--- a/src/views/layouts/master.pug
+++ b/src/views/layouts/master.pug
@@ -101,6 +101,7 @@ html(lang="ru")
     include ../mixins/attractions-excursion
     include ../mixins/main-about
     include ../mixins/search-card
+    include ../mixins/object-sanatorium
 
     include ../components/header
 
