--- a/src/views/pages/object.pug
+++ b/src/views/pages/object.pug
@@ -16,47 +16,81 @@ block content
     include ../components/object/object-gallery
     include ../components/object/object-hero
     .wrapper
+      .object__main
+        .object__wrapper
+          h2.object__title Основная информация <span>о санатории «Знание»</span>
+          .object__container
+            .object__descriptions
+              include ../components/object/object-description
+              .object__blocks
+                .object__block
+                  include ../components/object/object-transfer
+            .object__sidebar
+              include ../components/object/object-sidebar
+          include ../components/object/object-search
+          include ../components/object/object-conditions
+          include ../components/object/object-no-available
+    include ../components/object/object-sanatorium
+    .wrapper
       .object__wrapper
-        .object__container
-          .object__blocks
-            .object__block
-              include ../components/object/object-information
-            .object__block
-              h2.object__title Лечение <span>в санатории «Знание»</span>
-              include ../components/object/object-information-two
-            .object__block
-              include ../components/object/object-transfer
-          .object__sidebar
-            include ../components/object/object-sidebar
-        include ../components/object/object-search
-        include ../components/object/object-conditions
-        .object__cards
-          include ../components/object/object-card
-          include ../components/object/object-card-two
-        include ../components/object/object-contact
-        .object__descriptions
-          //- include ../components/object/object-description
-          //- include ../components/object/object-description-two
-          //- .object-description
-            .object-description__wrapper
-              h2.object__title Лечебные программы <span>в санатории «Знание»</span>
-            .object__dropdowns
-              include ../components/object/object-dropdown
-              include ../components/object/object-dropdown
-              include ../components/object/object-dropdown
-              include ../components/object/object-dropdown
-              include ../components/object/object-dropdown
-          //- include ../components/object/object-description-three
-          .object-description
-            .object-description__wrapper
-              h2.object__title 76 отзывов <span>о санатории «Знание»</span>
-                include ../components/object/object-rating
-                include ../components/object/object-reviews
-          //- .object-description
-          //-   .object-description__wrapper
-          //-     h2.object__title Расположение <span>санатория «Знание»</span>
-          //-       include ../components/object/object-location
+        include ../components/attractions/attractions-information
+        .object__reviews
+          .object-description__wrapper
+            h2.object__title 76 отзывов <span>о санатории «Знание»</span>
+              include ../components/object/object-rating
+              include ../components/object/object-reviews
         include ../components/object/object-about
     include ../components/object/object-faq
-  include ../components/attractions/attractions-sanatorium
+    .object__slider
+      include ../components/attractions/attractions-sanatorium
 
+
+            //- include ../components/object/object-description-two
+
+            //- .object-description
+            //-   .object-description__wrapper
+            //-     h2.object__title Лечебные программы <span>в санатории «Знание»</span>
+            //-   .object__dropdowns
+            //-     include ../components/object/object-dropdown
+            //-     include ../components/object/object-dropdown
+            //-     include ../components/object/object-dropdown
+            //-     include ../components/object/object-dropdown
+            //-     include ../components/object/object-dropdown
+            //- include ../components/object/object-description-three 
+
+            //- .object__blocks
+            //-   .object__block
+            //-     include ../components/object/object-information
+            //-   .object__block
+            //-     h2.object__title Лечение <span>в санатории «Знание»</span>
+            //-     include ../components/object/object-information-two
+            //-   .object__block
+            //-     include ../components/object/object-transfer
+            //- .object__cards
+            //-   include ../components/object/object-card
+            //-   include ../components/object/object-card-two
+            //- include ../components/object/object-contact
+            //- .object__descriptions
+            //-   include ../components/object/object-description
+            //-   include ../components/object/object-description-two
+            //-   .object-description
+            //-     .object-description__wrapper
+            //-       h2.object__title Лечебные программы <span>в санатории «Знание»</span>
+            //-     .object__dropdowns
+            //-       include ../components/object/object-dropdown
+            //-       include ../components/object/object-dropdown
+            //-       include ../components/object/object-dropdown
+            //-       include ../components/object/object-dropdown
+            //-       include ../components/object/object-dropdown
+            //-   include ../components/object/object-description-three
+              .object-description
+                .object-description__wrapper
+                  h2.object__title 76 отзывов <span>о санатории «Знание»</span>
+                    include ../components/object/object-rating
+                    include ../components/object/object-reviews
+              .object-description
+                .object-description__wrapper
+                  h2.object__title Расположение <span>санатория «Знание»</span>
+                    include ../components/object/object-location
+              //-     include ../components/object/object-about
+              //- include ../components/object/object-faq
